--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.4
-he.mod.updateDate = 30 \u0430\u043F\u0440. 2025\u202F\u0433.
+he.mod.updateDate = 1 \u043C\u0430\u044F 2025\u202F\u0433.
 
 settings.helium = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6C26\u914D\u7F6E
 settings.category.basic = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
@@ -48,7 +48,6 @@ dialog.mods.menu = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u043
 dialog.mods.upgradeAll = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u83B7\u53D6\u5931\u8D25
-dialog.mods.githubMod = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) Github Mod
 dialog.mods.checkUpdateFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
@@ -57,10 +56,11 @@ dialog.mods.updateValidS = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0
 dialog.mods.modStatCorrect = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) mod\u5DF2\u6B63\u5E38\u88C5\u8F7D
 dialog.mods.modStatError = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B64mod\u4E0D\u53EF\u7528
 dialog.mods.isLatest = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5DF2\u662F\u6700\u65B0\u7248\u672C
-dialog.mods.generateList = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u751F\u6210\u6E05\u5355
+dialog.mods.exportPack = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5237\u65B0
 dialog.mods.importFav = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u5165\u6536\u85CF\u5939
 dialog.mods.exportFav = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6536\u85CF\u5939
+dialog.mods.favoritesText = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.hideInvalid = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9690\u85CF\u4E0D\u53EF\u7528\u7684mod
 dialog.mods.author = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4F5C\u8005\uFF1A{0}
 dialog.mods.version = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u7248\u672C\uFF1A{0}
@@ -118,9 +118,11 @@ infos.enableAll = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432
 infos.disableAll = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u7981\u7528\u5168\u90E8
 infos.allSetting = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5168\u90E8\u8BBE\u7F6E
 infos.copied = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5DF2\u590D\u5236\u5230\u526A\u8D34\u677F
-
 infos.wip = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) WIP
 infos.notImplementYet = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6682\u672A\u5B9E\u73B0
+infos.exception = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u53D1\u751F\u5F02\u5E38\uFF01
+infos.error = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u53D1\u751F\u9519\u8BEF\uFF01
+
 misc.later = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u7A0D\u540E\u91CD\u542F
 misc.exitGame = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9000\u51FA\u6E38\u620F
 misc.recDefault = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
@@ -131,5 +133,4 @@ misc.sequence = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u
 misc.reverse = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9006\u5E8F
 misc.download = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E0B\u8F7D
 misc.complete = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5B8C\u6210
-infos.exception = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u53D1\u751F\u5F02\u5E38\uFF01
-infos.error = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u53D1\u751F\u9519\u8BEF\uFF01
+misc.save = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FDD\u5B58
