--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.4
-he.mod.updateDate = 2025\u5E744\u670830\u65E5
+he.mod.updateDate = 2025\u5E745\u67081\u65E5
 
 settings.helium = \u6C26\u914D\u7F6E
 settings.category.basic = \u57FA\u7840\u8BBE\u7F6E
@@ -48,7 +48,6 @@ dialog.mods.menu = \u83DC\u5355
 dialog.mods.upgradeAll = \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = \u83B7\u53D6\u5931\u8D25
-dialog.mods.githubMod = \u6765\u81EAGithub\u7684Mod
 dialog.mods.checkUpdateFailed = \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
@@ -57,10 +56,11 @@ dialog.mods.updateValidS = \u53D1\u73B0\u53EF\u7528\u7684\u66F4\u65B0
 dialog.mods.modStatCorrect = mod\u5DF2\u6B63\u5E38\u88C5\u8F7D
 dialog.mods.modStatError = \u6B64mod\u4E0D\u53EF\u7528
 dialog.mods.isLatest = \u5DF2\u662F\u6700\u65B0\u7248\u672C
-dialog.mods.generateList = \u751F\u6210\u6E05\u5355
+dialog.mods.exportPack = \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = \u5237\u65B0
 dialog.mods.importFav = \u5BFC\u5165\u6536\u85CF\u5939
 dialog.mods.exportFav = \u5BFC\u51FA\u6536\u85CF\u5939
+dialog.mods.favoritesText = \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.hideInvalid = \u9690\u85CF\u4E0D\u53EF\u7528\u7684mod
 dialog.mods.author = \u4F5C\u8005\uFF1A{0}
 dialog.mods.version = \u7248\u672C\uFF1A{0}
@@ -118,9 +118,11 @@ infos.enableAll = \u542F\u7528\u5168\u90E8
 infos.disableAll = \u7981\u7528\u5168\u90E8
 infos.allSetting = \u5168\u90E8\u8BBE\u7F6E
 infos.copied = \u5DF2\u590D\u5236\u5230\u526A\u8D34\u677F
-
 infos.wip = WIP
 infos.notImplementYet = \u6682\u672A\u5B9E\u73B0
+infos.exception = \u53D1\u751F\u5F02\u5E38\uFF01
+infos.error = \u53D1\u751F\u9519\u8BEF\uFF01
+
 misc.later = \u7A0D\u540E\u91CD\u542F
 misc.exitGame = \u9000\u51FA\u6E38\u620F
 misc.recDefault = \u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
@@ -131,5 +133,4 @@ misc.sequence = \u987A\u5E8F
 misc.reverse = \u9006\u5E8F
 misc.download = \u4E0B\u8F7D
 misc.complete = \u5B8C\u6210
-infos.exception = \u53D1\u751F\u5F02\u5E38\uFF01
-infos.error = \u53D1\u751F\u9519\u8BEF\uFF01
+misc.save = \u4FDD\u5B58
