修复在竖屏状态下导入mod导致的崩溃

--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,4 +1,4 @@
-he.mod.version = beta-0.5
+he.mod.version = beta-0.5b
 he.mod.updateDate = 01.05.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
