修复149版本的崩溃问题及遮挡问题

--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.5b
-he.mod.updateDate = 01.05.2025
+he.mod.version = beta-0.6
+he.mod.updateDate = 02.05.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
