--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.5b
-he.mod.updateDate = 2025\u5E745\u67081\u65E5
+he.mod.version = beta-0.6
+he.mod.updateDate = 2025\u5E745\u67082\u65E5
 
 settings.helium = \u6C26\u914D\u7F6E
 settings.category.basic = \u57FA\u7840\u8BBE\u7F6E
