--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -7,15 +7,15 @@ settings.category.keyBind = Pengaturan Tombol
 settings.category.debug = Pengaturan Debug
 
 settings.basic.backBlur = Latar Belakang Buram
-settings.item.enableBlur = Nyalakan Latar Belakang Buram
+settings.item.enableBlur = Aktifkan Latar Belakang Buram
 settings.item.blurScl = Tingkat keburaman
 settings.item.blurSpace = Intensitas keburaman
 
 settings.basic.entityInfo = Informasi Entitas Dalam Permainan
-settings.item.enableEntityInfoDisplay = Nyalakan info entitas
-settings.item.enableHealthBarDisplay = Nyalakan bar darah
-settings.item.enableUnitStatusDisplay = Nyalakan penampil status unit
-settings.item.enableRangeDisplay = Nyalakan penampil jarak entitas
+settings.item.enableEntityInfoDisplay = Aktifkan info entitas
+settings.item.enableHealthBarDisplay = Aktifkan bar darah
+settings.item.enableUnitStatusDisplay = Aktifkan penampil status unit
+settings.item.enableRangeDisplay = Aktifkan penampil jarak entitas
 settings.item.showAttackRange = Tampilkan jarak serangan
 settings.item.showHealRange = Tampilkan jarak penyembuhan
 settings.item.showOverdriveRange = Tampilkan jarak pemercepat
@@ -23,10 +23,10 @@ settings.item.entityInfoScale = Info entitas menunjukan skala
 settings.item.entityInfoAlpha = Info entitas menunjukan alfa(opasitas)
 
 settings.basic.placement = Panel Penempatan
-settings.item.enableBetterPlacement = Nyalakan panel penempatan terbaik
+settings.item.enableBetterPlacement = Aktifkan panel penempatan terbaik
 
 settings.basic.modsDialog = Manajer Mod
-settings.item.enableBetterModsDialog = Nyalakan dialog mod terbaik
+settings.item.enableBetterModsDialog = Aktifkan dialog mod terbaik
 
 settings.debug.logging = Informasi Log
 settings.item.loadingInfo = Keluaran info memuat
