Terbaik > yang lebih baik

--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -23,10 +23,10 @@ settings.item.entityInfoScale = Info entitas menunjukan skala
 settings.item.entityInfoAlpha = Info entitas menunjukan alfa(opasitas)
 
 settings.basic.placement = Panel Penempatan
-settings.item.enableBetterPlacement = Aktifkan panel penempatan terbaik
+settings.item.enableBetterPlacement = Aktifkan panel penempatan yang lebih baik
 
 settings.basic.modsDialog = Manajer Mod
-settings.item.enableBetterModsDialog = Aktifkan dialog mod terbaik
+settings.item.enableBetterModsDialog = Aktifkan dialog mod yang lebih baik
 
 settings.debug.logging = Informasi Log
 settings.item.loadingInfo = Keluaran info memuat
