--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -42,8 +42,8 @@ config.showAttackRange = Tmplkn\njarak\nsrangn
 config.showHealRange = Tmplkn  jrk pnymbhan
 config.showOverdriveRange = Tmplkn. jrk pmrcpat
 
-dialog.mods.enabled = Mod DiNyalakan
-dialog.mods.disabled = Mod DinonNyalakan
+dialog.mods.enabled = Mod Diaktifkan
+dialog.mods.disabled = Mod Dinonaktifkan
 dialog.mods.menu = Menu
 dialog.mods.upgradeAll = Semua Pembaruan
 dialog.mods.checkUpdate = Periksa Pembaruan
