Fix abnormal spaces
and also unintended dot

--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -39,8 +39,8 @@ settings.keyBind.entityInfo = Informasi Entitas Dalam Permainan
 settings.item.entityInfoHotKey = Pengaturan kunci info entitas
 
 config.showAttackRange = Tmplkn\njarak\nsrangn
-config.showHealRange = Tmplkn  jrk pnymbhan
-config.showOverdriveRange = Tmplkn. jrk pmrcpat
+config.showHealRange = Tmplkn jrk pnymbhan
+config.showOverdriveRange = Tmplkn jrk pmrcpat
 
 dialog.mods.enabled = Mod Diaktifkan
 dialog.mods.disabled = Mod Dinonaktifkan
