修正繁琐的网络错误弹出

--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.6
-he.mod.updateDate = 02.05.2025
+he.mod.updateDate = 05.06.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
@@ -59,6 +59,7 @@ dialog.mods.isLatest = (\u00DCbersetzung w\u00FCnschen) \u5DF2\u662F\u6700\u65B0
 dialog.mods.exportPack = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = (\u00DCbersetzung w\u00FCnschen) \u5237\u65B0
 dialog.mods.importFav = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u5165\u6536\u85CF\u5939
+dialog.mods.inputFavText = (\u00DCbersetzung w\u00FCnschen) \u5728\u4E0B\u65B9\u8F93\u5165\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.exportFav = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u51FA\u6536\u85CF\u5939
 dialog.mods.favoritesText = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.hideInvalid = (\u00DCbersetzung w\u00FCnschen) \u9690\u85CF\u4E0D\u53EF\u7528\u7684mod
