--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.6
-he.mod.updateDate = 2 \u043C\u0430\u044F 2025\u202F\u0433.
+he.mod.updateDate = 5 \u0438\u044E\u043D. 2025\u202F\u0433.
 
 settings.helium = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6C26\u914D\u7F6E
 settings.category.basic = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
@@ -59,6 +59,7 @@ dialog.mods.isLatest = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\
 dialog.mods.exportPack = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5237\u65B0
 dialog.mods.importFav = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u5165\u6536\u85CF\u5939
+dialog.mods.inputFavText = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5728\u4E0B\u65B9\u8F93\u5165\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.exportFav = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6536\u85CF\u5939
 dialog.mods.favoritesText = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.hideInvalid = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9690\u85CF\u4E0D\u53EF\u7528\u7684mod
