--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.6
-he.mod.updateDate = 2025\u5E745\u67082\u65E5
+he.mod.updateDate = 2025\u5E746\u67085\u65E5
 
 settings.helium = (\u5F85\u7FFB\u8B6F) \u6C26\u914D\u7F6E
 settings.category.basic = (\u5F85\u7FFB\u8B6F) \u57FA\u7840\u8BBE\u7F6E
@@ -59,6 +59,7 @@ dialog.mods.isLatest = (\u5F85\u7FFB\u8B6F) \u5DF2\u662F\u6700\u65B0\u7248\u672C
 dialog.mods.exportPack = (\u5F85\u7FFB\u8B6F) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = (\u5F85\u7FFB\u8B6F) \u5237\u65B0
 dialog.mods.importFav = (\u5F85\u7FFB\u8B6F) \u5BFC\u5165\u6536\u85CF\u5939
+dialog.mods.inputFavText = (\u5F85\u7FFB\u8B6F) \u5728\u4E0B\u65B9\u8F93\u5165\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.exportFav = (\u5F85\u7FFB\u8B6F) \u5BFC\u51FA\u6536\u85CF\u5939
 dialog.mods.favoritesText = (\u5F85\u7FFB\u8B6F) \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.hideInvalid = (\u5F85\u7FFB\u8B6F) \u9690\u85CF\u4E0D\u53EF\u7528\u7684mod
