--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.6
-he.mod.updateDate = 2025/05/02
+he.mod.updateDate = 2025/06/05
 
 settings.helium = \u30D8\u30EA\u30A6\u30E0\u8A2D\u5B9A
 settings.category.basic = \u57FA\u672C\u8A2D\u5B9A
@@ -59,6 +59,7 @@ dialog.mods.isLatest = \u73FE\u5728\u306F\u6700\u65B0\u30D0\u30FC\u30B8\u30E7\u3
 dialog.mods.exportPack = Mod\u30D1\u30C3\u30AF\u3092\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8
 dialog.mods.refresh = \u66F4\u65B0
 dialog.mods.importFav = \u304A\u6C17\u306B\u5165\u308A\u3092\u30A4\u30F3\u30DD\u30FC\u30C8
+dialog.mods.inputFavText = \u4EE5\u4E0B\u306B\u304A\u6C17\u306B\u5165\u308A\u306E\u30C6\u30AD\u30B9\u30C8\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\uFF1A
 dialog.mods.exportFav = \u304A\u6C17\u306B\u5165\u308A\u3092\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8
 dialog.mods.favoritesText = \u304A\u6C17\u306B\u5165\u308A\u30C6\u30AD\u30B9\u30C8\u3092\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\uFF1A
 dialog.mods.hideInvalid = \u7121\u52B9\u306AMod\u3092\u975E\u8868\u793A\u306B\u3059\u308B
