--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.6
-he.mod.updateDate = 7 Mei 2025
+he.mod.version = beta-0.7
+he.mod.updateDate = 10 Jun 2025
 
 settings.helium = Konfigurasi Helium
 settings.category.basic = Pengaturan Dasar
@@ -59,6 +59,7 @@ dialog.mods.isLatest = Saat ini adalah versi terakhir.
 dialog.mods.exportPack = Ekspor ModPack (Paket Mod)
 dialog.mods.refresh = Muat Ulang
 dialog.mods.importFav = Impor Favorit
+dialog.mods.inputFavText = (Untuk diterjemahkan) \u5728\u4E0B\u65B9\u8F93\u5165\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.exportFav = Ekspor Favorit
 dialog.mods.favoritesText = Ekspor teks favorit\uFF1A
 dialog.mods.hideInvalid = Sembunyikan mod cacat.
@@ -104,6 +105,40 @@ dialog.mods.mods = Daftar Mod
 dialog.mods.openFolderFailed = Tidak dapat membuka folder
 dialog.mods.cantOpenOnAndroid = Jalur file tidak dapat dibuka di Android\nKau dapat menyalinkan jalur dan membukanya di penelusur file:
 
+dialog.modPacker.title = (Untuk diterjemahkan) \u521B\u5EFA\u6574\u5408\u5305
+dialog.modPacker.showAll = (Untuk diterjemahkan) \u663E\u793A\u4E0D\u53EF\u7528\u7684mod
+dialog.modPacker.unselect = (Untuk diterjemahkan) \u53EF\u9009\u7684mod
+dialog.modPacker.select = (Untuk diterjemahkan) \u5DF2\u9009\u7684mod
+dialog.modPacker.options = (Untuk diterjemahkan) \uE87C \u6574\u5408\u5305\u9009\u9879
+dialog.modPacker.fileEntries = (Untuk diterjemahkan) \uF15B \u9644\u52A0\u6587\u4EF6
+dialog.modPacker.map = (Untuk diterjemahkan) \u6DFB\u52A0\u81EA\u5B9A\u4E49\u5730\u56FE
+dialog.modPacker.campaign = (Untuk diterjemahkan) \u6DFB\u52A0\u6218\u5F79\u5730\u56FE
+dialog.modPacker.schematic = (Untuk diterjemahkan) \u9009\u62E9\u84DD\u56FE
+dialog.modPacker.settings = (Untuk diterjemahkan) \u8BBE\u7F6E\u53CA\u6218\u5F79\u6570\u636E
+dialog.modPacker.customFile = (Untuk diterjemahkan) \u6DFB\u52A0\u81EA\u5B9A\u4E49\u6587\u4EF6
+dialog.modPacker.addFile = (Untuk diterjemahkan) \u6DFB\u52A0
+dialog.modPacker.packInfo = (Untuk diterjemahkan) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
+dialog.modPacker.packIcon = (Untuk diterjemahkan) \u56FE\u6807
+dialog.modPacker.packName = (Untuk diterjemahkan) \u6574\u5408\u5305\u540D\u79F0
+dialog.modPacker.internalName = (Untuk diterjemahkan) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
+dialog.modPacker.subTitle = (Untuk diterjemahkan) \u526F\u6807\u9898\uFF08\u53EF\u9009\uFF09
+dialog.modPacker.description = (Untuk diterjemahkan) \u6574\u5408\u5305\u63CF\u8FF0
+dialog.modPacker.author = (Untuk diterjemahkan) \u4F5C\u8005
+dialog.modPacker.version = (Untuk diterjemahkan) \u7248\u672C\u53F7
+dialog.modPacker.packConfig = (Untuk diterjemahkan) \uE853 \u6574\u5408\u5305\u914D\u7F6E
+dialog.modPacker.type = (Untuk diterjemahkan) \u6574\u5408\u5305\u7C7B\u578B
+dialog.modPacker.skipRepeat = (Untuk diterjemahkan) \u8DF3\u8FC7\u91CD\u590D\u6587\u4EF6
+dialog.modPacker.rawBackup = (Untuk diterjemahkan) \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
+dialog.modPacker.force = (Untuk diterjemahkan) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
+dialog.modPacker.uncheck = (Untuk diterjemahkan) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
+
+modpack.distribute.name = (Untuk diterjemahkan) \u5206\u53D1
+modpack.distribute.description = (Untuk diterjemahkan) \u5206\u53D1\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u4EC5\u7B80\u5355\u7684\u5C06\u6574\u5408\u7684mod\u548C\u6587\u4EF6\u5B89\u88C5\u5230\u73A9\u5BB6\u7684\u6E38\u620F\u4E2D\uFF0C\u9664\u91CD\u590D\u6587\u4EF6\u5916\u4E0D\u5BF9\u539F\u6709\u6587\u4EF6\u8FDB\u884C\u64CD\u4F5C\u3002
+modpack.shadow.name = (Untuk diterjemahkan) \u9690\u85CF
+modpack.shadow.description = (Untuk diterjemahkan) \u9690\u85CF\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u5B89\u88C5\u540E\u5C06\u4F1A\u7981\u7528\u73A9\u5BB6\u5F53\u524D\u5DF2\u5B89\u88C5\u7684\u5176\u4ED6mod\uFF0C\u4F46\u4E0D\u4F1A\u5F71\u54CD\u539F\u6709\u6E38\u620F\u6587\u4EF6\u3002
+modpack.override.name = (Untuk diterjemahkan) \u8986\u76D6
+modpack.override.description = (Untuk diterjemahkan) \u8986\u76D6\u6A21\u5F0F\u4E0B\uFF0C\u5B89\u88C5\u6574\u5408\u5305\u4F1A\u5C06\u539F\u6E38\u620F\u6587\u4EF6\u5B8C\u6574\u5907\u4EFD\u540E\uFF0C\u4F7F\u7528\u6574\u5408\u5305\u6587\u4EF6\u5B8C\u5168\u8986\u76D6\u6E38\u620F\u76EE\u5F55\u3002
+
 tools.tip.ctrlEntityInfo = Pilih entitas untuk menampilkan detil
 tools.tip.configEntityInfo = Pengaturan tampilan info entitas
 
@@ -128,6 +163,7 @@ misc.exitGame = Keluar permainan
 misc.recDefault = Atur Ulang ke Bawaan
 misc.open = Buka
 misc.close = Tutup
+misc.cancel = (Untuk diterjemahkan) \u53D6\u6D88
 misc.copy = Salin
 misc.sequence = Urut Kedepan
 misc.reverse = Urut Terbalik
