--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.6
-he.mod.updateDate = 2025/06/05
+he.mod.version = beta-0.7
+he.mod.updateDate = 2025/06/10
 
 settings.helium = \u30D8\u30EA\u30A6\u30E0\u8A2D\u5B9A
 settings.category.basic = \u57FA\u672C\u8A2D\u5B9A
@@ -105,6 +105,40 @@ dialog.mods.mods = Mod\u30EA\u30B9\u30C8
 dialog.mods.openFolderFailed = \u30D5\u30A9\u30EB\u30C0\u3092\u958B\u3051\u307E\u305B\u3093
 dialog.mods.cantOpenOnAndroid = Android\u30C7\u30D0\u30A4\u30B9\u3067\u306F\u30D5\u30A1\u30A4\u30EB\u30D1\u30B9\u3092\u958B\u3051\u307E\u305B\u3093\n\u4EE5\u4E0B\u306E\u30D1\u30B9\u3092\u30B3\u30D4\u30FC\u3057\u3066\u3001\u30D5\u30A1\u30A4\u30EB\u30DE\u30CD\u30FC\u30B8\u30E3\u30FC\u3067\u958B\u3044\u3066\u304F\u3060\u3055\u3044:
 
+dialog.modPacker.title = (\u7FFB\u8A33\u5F85\u3061) \u521B\u5EFA\u6574\u5408\u5305
+dialog.modPacker.showAll = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u4E0D\u53EF\u7528\u7684mod
+dialog.modPacker.unselect = (\u7FFB\u8A33\u5F85\u3061) \u53EF\u9009\u7684mod
+dialog.modPacker.select = (\u7FFB\u8A33\u5F85\u3061) \u5DF2\u9009\u7684mod
+dialog.modPacker.options = (\u7FFB\u8A33\u5F85\u3061) \uE87C \u6574\u5408\u5305\u9009\u9879
+dialog.modPacker.fileEntries = (\u7FFB\u8A33\u5F85\u3061) \uF15B \u9644\u52A0\u6587\u4EF6
+dialog.modPacker.map = (\u7FFB\u8A33\u5F85\u3061) \u6DFB\u52A0\u81EA\u5B9A\u4E49\u5730\u56FE
+dialog.modPacker.campaign = (\u7FFB\u8A33\u5F85\u3061) \u6DFB\u52A0\u6218\u5F79\u5730\u56FE
+dialog.modPacker.schematic = (\u7FFB\u8A33\u5F85\u3061) \u9009\u62E9\u84DD\u56FE
+dialog.modPacker.settings = (\u7FFB\u8A33\u5F85\u3061) \u8BBE\u7F6E\u53CA\u6218\u5F79\u6570\u636E
+dialog.modPacker.customFile = (\u7FFB\u8A33\u5F85\u3061) \u6DFB\u52A0\u81EA\u5B9A\u4E49\u6587\u4EF6
+dialog.modPacker.addFile = (\u7FFB\u8A33\u5F85\u3061) \u6DFB\u52A0
+dialog.modPacker.packInfo = (\u7FFB\u8A33\u5F85\u3061) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
+dialog.modPacker.packIcon = (\u7FFB\u8A33\u5F85\u3061) \u56FE\u6807
+dialog.modPacker.packName = (\u7FFB\u8A33\u5F85\u3061) \u6574\u5408\u5305\u540D\u79F0
+dialog.modPacker.internalName = (\u7FFB\u8A33\u5F85\u3061) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
+dialog.modPacker.subTitle = (\u7FFB\u8A33\u5F85\u3061) \u526F\u6807\u9898\uFF08\u53EF\u9009\uFF09
+dialog.modPacker.description = (\u7FFB\u8A33\u5F85\u3061) \u6574\u5408\u5305\u63CF\u8FF0
+dialog.modPacker.author = (\u7FFB\u8A33\u5F85\u3061) \u4F5C\u8005
+dialog.modPacker.version = (\u7FFB\u8A33\u5F85\u3061) \u7248\u672C\u53F7
+dialog.modPacker.packConfig = (\u7FFB\u8A33\u5F85\u3061) \uE853 \u6574\u5408\u5305\u914D\u7F6E
+dialog.modPacker.type = (\u7FFB\u8A33\u5F85\u3061) \u6574\u5408\u5305\u7C7B\u578B
+dialog.modPacker.skipRepeat = (\u7FFB\u8A33\u5F85\u3061) \u8DF3\u8FC7\u91CD\u590D\u6587\u4EF6
+dialog.modPacker.rawBackup = (\u7FFB\u8A33\u5F85\u3061) \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
+dialog.modPacker.force = (\u7FFB\u8A33\u5F85\u3061) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
+dialog.modPacker.uncheck = (\u7FFB\u8A33\u5F85\u3061) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
+
+modpack.distribute.name = (\u7FFB\u8A33\u5F85\u3061) \u5206\u53D1
+modpack.distribute.description = (\u7FFB\u8A33\u5F85\u3061) \u5206\u53D1\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u4EC5\u7B80\u5355\u7684\u5C06\u6574\u5408\u7684mod\u548C\u6587\u4EF6\u5B89\u88C5\u5230\u73A9\u5BB6\u7684\u6E38\u620F\u4E2D\uFF0C\u9664\u91CD\u590D\u6587\u4EF6\u5916\u4E0D\u5BF9\u539F\u6709\u6587\u4EF6\u8FDB\u884C\u64CD\u4F5C\u3002
+modpack.shadow.name = (\u7FFB\u8A33\u5F85\u3061) \u9690\u85CF
+modpack.shadow.description = (\u7FFB\u8A33\u5F85\u3061) \u9690\u85CF\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u5B89\u88C5\u540E\u5C06\u4F1A\u7981\u7528\u73A9\u5BB6\u5F53\u524D\u5DF2\u5B89\u88C5\u7684\u5176\u4ED6mod\uFF0C\u4F46\u4E0D\u4F1A\u5F71\u54CD\u539F\u6709\u6E38\u620F\u6587\u4EF6\u3002
+modpack.override.name = (\u7FFB\u8A33\u5F85\u3061) \u8986\u76D6
+modpack.override.description = (\u7FFB\u8A33\u5F85\u3061) \u8986\u76D6\u6A21\u5F0F\u4E0B\uFF0C\u5B89\u88C5\u6574\u5408\u5305\u4F1A\u5C06\u539F\u6E38\u620F\u6587\u4EF6\u5B8C\u6574\u5907\u4EFD\u540E\uFF0C\u4F7F\u7528\u6574\u5408\u5305\u6587\u4EF6\u5B8C\u5168\u8986\u76D6\u6E38\u620F\u76EE\u5F55\u3002
+
 tools.tip.ctrlEntityInfo = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u3092\u9078\u629E\u3057\u3066\u8A73\u7D30\u3092\u8868\u793A
 tools.tip.configEntityInfo = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u60C5\u5831\u8868\u793A\u8A2D\u5B9A
 
@@ -129,6 +163,7 @@ misc.exitGame = \u30B2\u30FC\u30E0\u7D42\u4E86
 misc.recDefault = \u30C7\u30D5\u30A9\u30EB\u30C8\u306B\u623B\u3059
 misc.open = \u958B\u304F
 misc.close = \u9589\u3058\u308B
+misc.cancel = (\u7FFB\u8A33\u5F85\u3061) \u53D6\u6D88
 misc.copy = \u30B3\u30D4\u30FC
 misc.sequence = \u6607\u9806\u30BD\u30FC\u30C8
 misc.reverse = \u964D\u9806\u30BD\u30FC\u30C8
