--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.6
-he.mod.updateDate = 2025\u5E746\u67085\u65E5
+he.mod.version = beta-0.7
+he.mod.updateDate = 2025\u5E746\u670810\u65E5
 
 settings.helium = \u6C26\u914D\u7F6E
 settings.category.basic = \u57FA\u7840\u8BBE\u7F6E
@@ -105,6 +105,40 @@ dialog.mods.mods = mod\u5217\u8868
 dialog.mods.openFolderFailed = \u65E0\u6CD5\u6253\u5F00\u76EE\u5F55
 dialog.mods.cantOpenOnAndroid = \u5728Android\u8BBE\u5907\u4E0A\u65E0\u6CD5\u6253\u5F00\u6587\u4EF6\u8DEF\u5F84\n\u4F60\u53EF\u4EE5\u590D\u5236\u5982\u4E0B\u8DEF\u5F84\u624B\u52A8\u5728\u6587\u4EF6\u7BA1\u7406\u5668\u4E2D\u6253\u5F00\uFF1A
 
+dialog.modPacker.title = \u521B\u5EFA\u6574\u5408\u5305
+dialog.modPacker.showAll = \u663E\u793A\u4E0D\u53EF\u7528\u7684mod
+dialog.modPacker.unselect = \u53EF\u9009\u7684mod
+dialog.modPacker.select = \u5DF2\u9009\u7684mod
+dialog.modPacker.options = \uE87C \u6574\u5408\u5305\u9009\u9879
+dialog.modPacker.fileEntries = \uF15B \u9644\u52A0\u6587\u4EF6
+dialog.modPacker.map = \u6DFB\u52A0\u81EA\u5B9A\u4E49\u5730\u56FE
+dialog.modPacker.campaign = \u6DFB\u52A0\u6218\u5F79\u5730\u56FE
+dialog.modPacker.schematic = \u9009\u62E9\u84DD\u56FE
+dialog.modPacker.settings = \u8BBE\u7F6E\u53CA\u6218\u5F79\u6570\u636E
+dialog.modPacker.customFile = \u6DFB\u52A0\u81EA\u5B9A\u4E49\u6587\u4EF6
+dialog.modPacker.addFile = \u6DFB\u52A0
+dialog.modPacker.packInfo = \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
+dialog.modPacker.packIcon = \u56FE\u6807
+dialog.modPacker.packName = \u6574\u5408\u5305\u540D\u79F0
+dialog.modPacker.internalName = \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
+dialog.modPacker.subTitle = \u526F\u6807\u9898\uFF08\u53EF\u9009\uFF09
+dialog.modPacker.description = \u6574\u5408\u5305\u63CF\u8FF0
+dialog.modPacker.author = \u4F5C\u8005
+dialog.modPacker.version = \u7248\u672C\u53F7
+dialog.modPacker.packConfig = \uE853 \u6574\u5408\u5305\u914D\u7F6E
+dialog.modPacker.type = \u6574\u5408\u5305\u7C7B\u578B
+dialog.modPacker.skipRepeat = \u8DF3\u8FC7\u91CD\u590D\u6587\u4EF6
+dialog.modPacker.rawBackup = \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
+dialog.modPacker.force = \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
+dialog.modPacker.uncheck = \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
+
+modpack.distribute.name = \u5206\u53D1
+modpack.distribute.description = \u5206\u53D1\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u4EC5\u7B80\u5355\u7684\u5C06\u6574\u5408\u7684mod\u548C\u6587\u4EF6\u5B89\u88C5\u5230\u73A9\u5BB6\u7684\u6E38\u620F\u4E2D\uFF0C\u9664\u91CD\u590D\u6587\u4EF6\u5916\u4E0D\u5BF9\u539F\u6709\u6587\u4EF6\u8FDB\u884C\u64CD\u4F5C\u3002
+modpack.shadow.name = \u9690\u85CF
+modpack.shadow.description = \u9690\u85CF\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u5B89\u88C5\u540E\u5C06\u4F1A\u7981\u7528\u73A9\u5BB6\u5F53\u524D\u5DF2\u5B89\u88C5\u7684\u5176\u4ED6mod\uFF0C\u4F46\u4E0D\u4F1A\u5F71\u54CD\u539F\u6709\u6E38\u620F\u6587\u4EF6\u3002
+modpack.override.name = \u8986\u76D6
+modpack.override.description = \u8986\u76D6\u6A21\u5F0F\u4E0B\uFF0C\u5B89\u88C5\u6574\u5408\u5305\u4F1A\u5C06\u539F\u6E38\u620F\u6587\u4EF6\u5B8C\u6574\u5907\u4EFD\u540E\uFF0C\u4F7F\u7528\u6574\u5408\u5305\u6587\u4EF6\u5B8C\u5168\u8986\u76D6\u6E38\u620F\u76EE\u5F55\u3002
+
 tools.tip.ctrlEntityInfo = \u9009\u62E9\u5E76\u663E\u793A\u5B9E\u4F53\u8BE6\u60C5
 tools.tip.configEntityInfo = \u5B9E\u4F53\u4FE1\u606F\u663E\u793A\u5668\u8BBE\u7F6E
 
@@ -129,6 +163,7 @@ misc.exitGame = \u9000\u51FA\u6E38\u620F
 misc.recDefault = \u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
 misc.open = \u6253\u5F00
 misc.close = \u5173\u95ED
+misc.cancel = \u53D6\u6D88
 misc.copy = \u590D\u5236
 misc.sequence = \u987A\u5E8F
 misc.reverse = \u9006\u5E8F
