--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.7
-he.mod.updateDate = 14.06.2025
+he.mod.version = beta-0.8
+he.mod.updateDate = 16.06.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
@@ -121,8 +121,7 @@ dialog.modPacker.packInfo = (\u00DCbersetzung w\u00FCnschen) \ \uF129 \u6574\u54
 dialog.modPacker.packIcon = (\u00DCbersetzung w\u00FCnschen) \u56FE\u6807
 dialog.modPacker.packName = (\u00DCbersetzung w\u00FCnschen) \u6574\u5408\u5305\u540D\u79F0
 dialog.modPacker.internalName = (\u00DCbersetzung w\u00FCnschen) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
-dialog.modPacker.subTitle = (\u00DCbersetzung w\u00FCnschen) \u526F\u6807\u9898\uFF08\u53EF\u9009\uFF09
-dialog.modPacker.description = (\u00DCbersetzung w\u00FCnschen) \u6574\u5408\u5305\u63CF\u8FF0
+dialog.modPacker.description = (\u00DCbersetzung w\u00FCnschen) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
 dialog.modPacker.author = (\u00DCbersetzung w\u00FCnschen) \u4F5C\u8005
 dialog.modPacker.version = (\u00DCbersetzung w\u00FCnschen) \u7248\u672C\u53F7
 dialog.modPacker.packConfig = (\u00DCbersetzung w\u00FCnschen) \uE853 \u6574\u5408\u5305\u914D\u7F6E
@@ -132,10 +131,15 @@ dialog.modPacker.rawBackup = (\u00DCbersetzung w\u00FCnschen) \u4F7F\u7528\u539F
 dialog.modPacker.force = (\u00DCbersetzung w\u00FCnschen) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
 dialog.modPacker.uncheck = (\u00DCbersetzung w\u00FCnschen) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
 dialog.modPacker.forceVersion = (\u00DCbersetzung w\u00FCnschen) \u5F3A\u5236\u6E38\u620F\u7248\u672C
-dialog.modPacker.openFIle = (\u00DCbersetzung w\u00FCnschen) \u6253\u5F00\u6574\u5408\u5305\u6587\u4EF6
+dialog.modPacker.editFIle = (\u00DCbersetzung w\u00FCnschen) \u7F16\u8F91\u6574\u5408\u5305
 dialog.modPacker.export = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u51FA\u6574\u5408\u5305\u6587\u4EF6
 dialog.modPacker.inModPack = (\u00DCbersetzung w\u00FCnschen) \u6765\u81EA\u8BFB\u53D6\u7684\u6574\u5408\u5305
 dialog.modPacker.completed = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u51FA\u6574\u5408\u5305\u5B8C\u6210
+dialog.modPacker.failed = (\u00DCbersetzung w\u00FCnschen) \u5BFC\u51FA\u5931\u8D25
+dialog.modPacker.metaError = (\u00DCbersetzung w\u00FCnschen) \u8BF7\u68C0\u67E5\u6574\u5408\u5305\u4FE1\u606F
+dialog.modPacker.filesError = (\u00DCbersetzung w\u00FCnschen) \u8BF7\u68C0\u67E5\u9644\u52A0\u6587\u4EF6\u8BBE\u7F6E
+dialog.modPacker.modsError = (\u00DCbersetzung w\u00FCnschen) \u6574\u5408\u5305\u6709\u4E0D\u53EF\u7528\u7684mod
+dialog.modPacker.modsDependenciesError = (\u00DCbersetzung w\u00FCnschen) \u6574\u5408\u7684mod\u7F3A\u5C11\u4F9D\u8D56\u9879
 
 modpack.distribute.name = (\u00DCbersetzung w\u00FCnschen) \u5206\u53D1
 modpack.distribute.description = (\u00DCbersetzung w\u00FCnschen) \u5206\u53D1\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u4EC5\u7B80\u5355\u7684\u5C06\u6574\u5408\u7684mod\u548C\u6587\u4EF6\u5B89\u88C5\u5230\u73A9\u5BB6\u7684\u6E38\u620F\u4E2D\uFF0C\u9664\u91CD\u590D\u6587\u4EF6\u5916\u4E0D\u5BF9\u539F\u6709\u6587\u4EF6\u8FDB\u884C\u64CD\u4F5C\u3002
