--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025/06/16
+he.mod.updateDate = 2025/06/17
 
 settings.helium = \u30D8\u30EA\u30A6\u30E0\u8A2D\u5B9A
 settings.category.basic = \u57FA\u672C\u8A2D\u5B9A
@@ -56,6 +56,7 @@ dialog.mods.updateValidS = \u5229\u7528\u53EF\u80FD\u306A\u66F4\u65B0\u304C\u898
 dialog.mods.modStatCorrect = \u3053\u306EMod\u306F\u6B63\u3057\u304F\u30ED\u30FC\u30C9\u3055\u308C\u307E\u3057\u305F\u3002
 dialog.mods.modStatError = \u3053\u306EMod\u306F\u7121\u52B9\u3067\u3059\u3002
 dialog.mods.isLatest = \u73FE\u5728\u306F\u6700\u65B0\u30D0\u30FC\u30B8\u30E7\u30F3\u3067\u3059\u3002
+dialog.mods.localFile = (\u7FFB\u8A33\u5F85\u3061) \u672C\u5730\u6A21\u7EC4
 dialog.mods.exportPack = Mod\u30D1\u30C3\u30AF\u3092\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8
 dialog.mods.refresh = \u66F4\u65B0
 dialog.mods.importFav = \u304A\u6C17\u306B\u5165\u308A\u3092\u30A4\u30F3\u30DD\u30FC\u30C8
@@ -119,6 +120,8 @@ dialog.modPacker.customFile = (\u7FFB\u8A33\u5F85\u3061) \u6DFB\u52A0\u81EA\u5B9
 dialog.modPacker.addFile = (\u7FFB\u8A33\u5F85\u3061) \u6DFB\u52A0
 dialog.modPacker.packInfo = (\u7FFB\u8A33\u5F85\u3061) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
 dialog.modPacker.packIcon = (\u7FFB\u8A33\u5F85\u3061) \u56FE\u6807
+dialog.modPacker.imageError = (\u7FFB\u8A33\u5F85\u3061) \u9009\u62E9\u7684\u6587\u4EF6\u4E0D\u5408\u6CD5
+dialog.modPacker.iconRequire = (\u7FFB\u8A33\u5F85\u3061) \u56FE\u6807\u7684\u957F\u5BBD\u5FC5\u987B\u662F\u4E00\u81F4\u7684
 dialog.modPacker.packName = (\u7FFB\u8A33\u5F85\u3061) \u6574\u5408\u5305\u540D\u79F0
 dialog.modPacker.internalName = (\u7FFB\u8A33\u5F85\u3061) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
 dialog.modPacker.description = (\u7FFB\u8A33\u5F85\u3061) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
