--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 16 \u0438\u044E\u043D. 2025\u202F\u0433.
+he.mod.updateDate = 17 \u0438\u044E\u043D. 2025\u202F\u0433.
 
 settings.helium = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6C26\u914D\u7F6E
 settings.category.basic = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
@@ -56,6 +56,7 @@ dialog.mods.updateValidS = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0
 dialog.mods.modStatCorrect = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) mod\u5DF2\u6B63\u5E38\u88C5\u8F7D
 dialog.mods.modStatError = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B64mod\u4E0D\u53EF\u7528
 dialog.mods.isLatest = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5DF2\u662F\u6700\u65B0\u7248\u672C
+dialog.mods.localFile = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u672C\u5730\u6A21\u7EC4
 dialog.mods.exportPack = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5237\u65B0
 dialog.mods.importFav = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u5165\u6536\u85CF\u5939
@@ -119,6 +120,8 @@ dialog.modPacker.customFile = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440
 dialog.modPacker.addFile = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6DFB\u52A0
 dialog.modPacker.packInfo = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
 dialog.modPacker.packIcon = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u56FE\u6807
+dialog.modPacker.imageError = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9009\u62E9\u7684\u6587\u4EF6\u4E0D\u5408\u6CD5
+dialog.modPacker.iconRequire = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u56FE\u6807\u7684\u957F\u5BBD\u5FC5\u987B\u662F\u4E00\u81F4\u7684
 dialog.modPacker.packName = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6574\u5408\u5305\u540D\u79F0
 dialog.modPacker.internalName = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
 dialog.modPacker.description = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
