--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 16 Jun 2025
+he.mod.updateDate = 17 Jun 2025
 
 settings.helium = Konfigurasi Helium
 settings.category.basic = Pengaturan Dasar
@@ -56,6 +56,7 @@ dialog.mods.updateValidS = Pembaruan yang benar telah ditemukan.
 dialog.mods.modStatCorrect = Mod ini telah dimuat dengan tepat.
 dialog.mods.modStatError = Mod ini tidak sah.
 dialog.mods.isLatest = Saat ini adalah versi terakhir.
+dialog.mods.localFile = (Untuk diterjemahkan) \u672C\u5730\u6A21\u7EC4
 dialog.mods.exportPack = Ekspor ModPack (Paket Mod)
 dialog.mods.refresh = Muat Ulang
 dialog.mods.importFav = Impor Favorit
@@ -119,6 +120,8 @@ dialog.modPacker.customFile = (Untuk diterjemahkan) \u6DFB\u52A0\u81EA\u5B9A\u4E
 dialog.modPacker.addFile = (Untuk diterjemahkan) \u6DFB\u52A0
 dialog.modPacker.packInfo = (Untuk diterjemahkan) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
 dialog.modPacker.packIcon = (Untuk diterjemahkan) \u56FE\u6807
+dialog.modPacker.imageError = (Untuk diterjemahkan) \u9009\u62E9\u7684\u6587\u4EF6\u4E0D\u5408\u6CD5
+dialog.modPacker.iconRequire = (Untuk diterjemahkan) \u56FE\u6807\u7684\u957F\u5BBD\u5FC5\u987B\u662F\u4E00\u81F4\u7684
 dialog.modPacker.packName = (Untuk diterjemahkan) \u6574\u5408\u5305\u540D\u79F0
 dialog.modPacker.internalName = (Untuk diterjemahkan) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
 dialog.modPacker.description = (Untuk diterjemahkan) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
