--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025\u5E746\u670816\u65E5
+he.mod.updateDate = 2025\u5E746\u670817\u65E5
 
 settings.helium = (\u5F85\u7FFB\u8B6F) \u6C26\u914D\u7F6E
 settings.category.basic = (\u5F85\u7FFB\u8B6F) \u57FA\u7840\u8BBE\u7F6E
@@ -56,6 +56,7 @@ dialog.mods.updateValidS = (\u5F85\u7FFB\u8B6F) \u53D1\u73B0\u53EF\u7528\u7684\u
 dialog.mods.modStatCorrect = (\u5F85\u7FFB\u8B6F) mod\u5DF2\u6B63\u5E38\u88C5\u8F7D
 dialog.mods.modStatError = (\u5F85\u7FFB\u8B6F) \u6B64mod\u4E0D\u53EF\u7528
 dialog.mods.isLatest = (\u5F85\u7FFB\u8B6F) \u5DF2\u662F\u6700\u65B0\u7248\u672C
+dialog.mods.localFile = (\u5F85\u7FFB\u8B6F) \u672C\u5730\u6A21\u7EC4
 dialog.mods.exportPack = (\u5F85\u7FFB\u8B6F) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = (\u5F85\u7FFB\u8B6F) \u5237\u65B0
 dialog.mods.importFav = (\u5F85\u7FFB\u8B6F) \u5BFC\u5165\u6536\u85CF\u5939
@@ -119,6 +120,8 @@ dialog.modPacker.customFile = (\u5F85\u7FFB\u8B6F) \u6DFB\u52A0\u81EA\u5B9A\u4E4
 dialog.modPacker.addFile = (\u5F85\u7FFB\u8B6F) \u6DFB\u52A0
 dialog.modPacker.packInfo = (\u5F85\u7FFB\u8B6F) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
 dialog.modPacker.packIcon = (\u5F85\u7FFB\u8B6F) \u56FE\u6807
+dialog.modPacker.imageError = (\u5F85\u7FFB\u8B6F) \u9009\u62E9\u7684\u6587\u4EF6\u4E0D\u5408\u6CD5
+dialog.modPacker.iconRequire = (\u5F85\u7FFB\u8B6F) \u56FE\u6807\u7684\u957F\u5BBD\u5FC5\u987B\u662F\u4E00\u81F4\u7684
 dialog.modPacker.packName = (\u5F85\u7FFB\u8B6F) \u6574\u5408\u5305\u540D\u79F0
 dialog.modPacker.internalName = (\u5F85\u7FFB\u8B6F) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
 dialog.modPacker.description = (\u5F85\u7FFB\u8B6F) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
