重构信息显示器核心代码，大大优化性能问题（是真的极大的优化了性能，是的，这让帧率至少上升了数倍）

--- a/ModpackModel/assets/bundles/bundle_zh_CN.properties
+++ b/ModpackModel/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
 modpack.mod.version = unspecified
-modpack.mod.updateDate = 2025\u5E746\u670817\u65E5
+modpack.mod.updateDate = 2025\u5E746\u670828\u65E5
 he.mod.version = beta-0.7
 he.mod.updateDate = 2025\u5E746\u670812\u65E5
 
@@ -18,6 +18,13 @@ dialog.installPack.force = \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
 dialog.installPack.uncheck = \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
 dialog.installPack.forceVersion = \u5F3A\u5236\u6E38\u620F\u7248\u672C
 dialog.installPack.complete = \u6574\u5408\u5305\u5DF2\u6210\u529F\u5B89\u88C5\uFF0C\u8BF7\u91CD\u542F\u6E38\u620F
+
+modpack.distribute.name = \u5206\u53D1
+modpack.distribute.description = \u5206\u53D1\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u4EC5\u7B80\u5355\u7684\u5C06\u6574\u5408\u7684mod\u548C\u6587\u4EF6\u5B89\u88C5\u5230\u73A9\u5BB6\u7684\u6E38\u620F\u4E2D\uFF0C\u9664\u91CD\u590D\u6587\u4EF6\u5916\u4E0D\u5BF9\u539F\u6709\u6587\u4EF6\u8FDB\u884C\u64CD\u4F5C\u3002
+modpack.shadow.name = \u9690\u85CF
+modpack.shadow.description = \u9690\u85CF\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u5B89\u88C5\u540E\u5C06\u4F1A\u7981\u7528\u73A9\u5BB6\u5F53\u524D\u5DF2\u5B89\u88C5\u7684\u5176\u4ED6mod\uFF0C\u4F46\u4E0D\u4F1A\u5F71\u54CD\u539F\u6709\u6E38\u620F\u6587\u4EF6\u3002
+modpack.override.name = \u8986\u76D6
+modpack.override.description = \u8986\u76D6\u6A21\u5F0F\u4E0B\uFF0C\u5B89\u88C5\u6574\u5408\u5305\u4F1A\u5C06\u539F\u6E38\u620F\u6587\u4EF6\u5B8C\u6574\u5907\u4EFD\u540E\uFF0C\u4F7F\u7528\u6574\u5408\u5305\u6587\u4EF6\u5B8C\u5168\u8986\u76D6\u6E38\u620F\u76EE\u5F55\u3002
 
 dialog.recovering.title = \u6062\u590D\u5907\u4EFD
 dialog.recovering.confirm = \u786E\u8BA4\u8981\u6062\u590D\u5230\u5907\u4EFD\u7684\u6E38\u620F\u72B6\u6001\u5417\uFF1F
