--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025/06/17
+he.mod.updateDate = 2025/06/28
 
 settings.helium = \u30D8\u30EA\u30A6\u30E0\u8A2D\u5B9A
 settings.category.basic = \u57FA\u672C\u8A2D\u5B9A
@@ -16,6 +16,7 @@ settings.item.enableEntityInfoDisplay = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u60
 settings.item.enableHealthBarDisplay = \u4F53\u529B\u30D0\u30FC\u3092\u6709\u52B9
 settings.item.enableUnitStatusDisplay = \u30B9\u30C6\u30FC\u30BF\u30B9\u52B9\u679C\u8868\u793A\u3092\u6709\u52B9
 settings.item.enableRangeDisplay = \u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u7BC4\u56F2\u8868\u793A\u3092\u6709\u52B9
+settings.item.lowRangeRenderer = (\u7FFB\u8A33\u5F85\u3061) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
 settings.item.showAttackRange = \u653B\u6483\u7BC4\u56F2\u3092\u8868\u793A
 settings.item.showHealRange = \u56DE\u5FA9\u7BC4\u56F2\u3092\u8868\u793A
 settings.item.showOverdriveRange = \u30AA\u30FC\u30D0\u30FC\u30C9\u30E9\u30A4\u30D6\u7BC4\u56F2\u3092\u8868\u793A
@@ -133,7 +134,7 @@ dialog.modPacker.skipRepeat = (\u7FFB\u8A33\u5F85\u3061) \u8DF3\u8FC7\u91CD\u590
 dialog.modPacker.rawBackup = (\u7FFB\u8A33\u5F85\u3061) \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
 dialog.modPacker.force = (\u7FFB\u8A33\u5F85\u3061) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
 dialog.modPacker.uncheck = (\u7FFB\u8A33\u5F85\u3061) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
-dialog.modPacker.forceVersion = (\u7FFB\u8A33\u5F85\u3061) \u5F3A\u5236\u6E38\u620F\u7248\u672C
+dialog.modPacker.discard = (\u7FFB\u8A33\u5F85\u3061) \u5F53\u524D\u7F16\u8F91\u7684\u4FE1\u606F\u90FD\u5C06\u4E22\u5931
 dialog.modPacker.editFIle = (\u7FFB\u8A33\u5F85\u3061) \u7F16\u8F91\u6574\u5408\u5305
 dialog.modPacker.export = (\u7FFB\u8A33\u5F85\u3061) \u5BFC\u51FA\u6574\u5408\u5305\u6587\u4EF6
 dialog.modPacker.inModPack = (\u7FFB\u8A33\u5F85\u3061) \u6765\u81EA\u8BFB\u53D6\u7684\u6574\u5408\u5305
