--- a/assets/bundles/bundle_id_ID.properties
+++ b/assets/bundles/bundle_id_ID.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 17 Jun 2025
+he.mod.updateDate = 28 Jun 2025
 
 settings.helium = Konfigurasi Helium
 settings.category.basic = Pengaturan Dasar
@@ -16,6 +16,7 @@ settings.item.enableEntityInfoDisplay = Nyalakan info entitas
 settings.item.enableHealthBarDisplay = Nyalakan bar darah
 settings.item.enableUnitStatusDisplay = Nyalakan penampil status unit
 settings.item.enableRangeDisplay = Nyalakan penampil jarak entitas
+settings.item.lowRangeRenderer = (Untuk diterjemahkan) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
 settings.item.showAttackRange = Tampilkan jarak serangan
 settings.item.showHealRange = Tampilkan jarak penyembuhan
 settings.item.showOverdriveRange = Tampilkan jarak pemercepat
@@ -133,7 +134,7 @@ dialog.modPacker.skipRepeat = (Untuk diterjemahkan) \u8DF3\u8FC7\u91CD\u590D\u65
 dialog.modPacker.rawBackup = (Untuk diterjemahkan) \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
 dialog.modPacker.force = (Untuk diterjemahkan) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
 dialog.modPacker.uncheck = (Untuk diterjemahkan) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
-dialog.modPacker.forceVersion = (Untuk diterjemahkan) \u5F3A\u5236\u6E38\u620F\u7248\u672C
+dialog.modPacker.discard = (Untuk diterjemahkan) \u5F53\u524D\u7F16\u8F91\u7684\u4FE1\u606F\u90FD\u5C06\u4E22\u5931
 dialog.modPacker.editFIle = (Untuk diterjemahkan) \u7F16\u8F91\u6574\u5408\u5305
 dialog.modPacker.export = (Untuk diterjemahkan) \u5BFC\u51FA\u6574\u5408\u5305\u6587\u4EF6
 dialog.modPacker.inModPack = (Untuk diterjemahkan) \u6765\u81EA\u8BFB\u53D6\u7684\u6574\u5408\u5305
