--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025\u5E746\u670817\u65E5
+he.mod.updateDate = 2025\u5E746\u670828\u65E5
 
 settings.helium = \u6C26\u914D\u7F6E
 settings.category.basic = \u57FA\u7840\u8BBE\u7F6E
@@ -16,6 +16,7 @@ settings.item.enableEntityInfoDisplay = \u542F\u7528\u5B9E\u4F53\u4FE1\u606F\u66
 settings.item.enableHealthBarDisplay = \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
 settings.item.enableUnitStatusDisplay = \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
 settings.item.enableRangeDisplay = \u542F\u7528\u8303\u56F4\u663E\u793A
+settings.item.lowRangeRenderer = \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
 settings.item.showAttackRange = \u663E\u793A\u653B\u51FB\u8303\u56F4
 settings.item.showHealRange = \u663E\u793A\u4FEE\u590D\u8303\u56F4
 settings.item.showOverdriveRange = \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
@@ -133,7 +134,7 @@ dialog.modPacker.skipRepeat = \u8DF3\u8FC7\u91CD\u590D\u6587\u4EF6
 dialog.modPacker.rawBackup = \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
 dialog.modPacker.force = \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
 dialog.modPacker.uncheck = \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
-dialog.modPacker.forceVersion = \u5F3A\u5236\u6E38\u620F\u7248\u672C
+dialog.modPacker.discard = \u5F53\u524D\u7F16\u8F91\u7684\u4FE1\u606F\u90FD\u5C06\u4E22\u5931
 dialog.modPacker.editFIle = \u7F16\u8F91\u6574\u5408\u5305
 dialog.modPacker.export = \u5BFC\u51FA\u6574\u5408\u5305\u6587\u4EF6
 dialog.modPacker.inModPack = \u6765\u81EA\u8BFB\u53D6\u7684\u6574\u5408\u5305
